Rename the application to AIDA

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AiGenDA</title>
+    <title>AIDA</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="main-area">
     <!-- Container for dynamically loaded content -->
     <div id="content-wrapper">
-        Welcome to AiGenDA! Type your request to get started.
+        Welcome to AIDA! Type your request to get started.
     </div>
 </div>
 <div id="input-area">
